# imhide

./: .gitignore  CHANGELOG.md  README.md  all_tests.sh  env.sample  pyproject.toml
src/imhide/: ErrorCorrectingCode.py  __init__.py  crypto.py  image_codec.py
tests/: coverage.conf  test_crypto.py  test_extension.py  test_image.py
